Fix card's margins on small screens

--- a/client/src/app/App.module.scss
+++ b/client/src/app/App.module.scss
@@ -15,11 +15,16 @@
   font-size: 2rem;
 }
 
+.contentContainer {
+  max-width: 1024px;
+  margin: 0px auto;
+}
+
 .card {
   background: $light-white-color;
   color: $kinda-black-color;
   box-shadow: 0px 0px 5px 0px transparentize($kinda-black-color, 0.5);
-  margin: 30px;
+  margin: 30px 30px;
   padding: 20px;
   min-height: calc(100vh - 200px);
 }
